force-app/main/default/objects/Gift__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>128</length>
    <type>Text</type>
</CustomField>