force-app/main/default/objects/Gift__c/fields/Gift_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Gift_Exchange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Exchange</label>
    <referenceTo>Gift_Exchange__c</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>