force-app/main/default/objects/Gift__c/fields/Gift_URL__c.field-meta.xml
<CustomField>
    <fullName>Gift_URL__c</fullName>
    <label>Gift URL</label>
    <type>Url</type>
</CustomField>