force-app/main/default/objects/Gift__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( Image_URL__c , Name, 50,50)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>