force-app/main/default/objects/Gift__c/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ordered</fullName>
                <default>true</default>
                <label>Not Ordered</label>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>