force-app/main/default/objects/Gift__c/fields/Wrapped_URL__c.field-meta.xml
<CustomField>
    <fullName>Wrapped_URL__c</fullName>
    <defaultValue>&quot;/resource/Presents/Presents/&quot; &amp;  right(text(TimeNOW()), 1)  &amp; &quot;.png&quot;</defaultValue>
    <label>Wrapped URL</label>
    <type>Url</type>
</CustomField>