force-app/main/default/objects/Gift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gift_Exchange__c</columns>
    <columns>From__c</columns>
    <columns>Recipient__c</columns>
    <columns>Opened__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Wrapped_URL__c</columns>
    <columns>Gift_URL__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>